<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/clearb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/bclear"
        android:textSize="17sp" />

    <Button
        android:id="@+id/zerob"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_toEndOf="@+id/clearb"
        android:text="@string/b0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/xsquareb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bx2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/xcubeb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/xsquareb"
        android:text="@string/bx3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/factb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/bfact"
        android:textSize="20sp" />

    <Button
        android:id="@+id/oneb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/clearb"
        android:layout_alignParentStart="true"
        android:text="@string/b1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/twob"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/clearb"
        android:layout_toEndOf="@+id/clearb"
        android:text="@string/b2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/threeb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/clearb"
        android:layout_centerHorizontal="true"
        android:text="@string/b3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/equalstob"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/clearb"
        android:layout_toEndOf="@+id/xsquareb"
        android:text="@string/bequalsto"
        android:textSize="20sp" />

    <Button
        android:id="@+id/modb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/clearb"
        android:layout_alignParentEnd="true"
        android:text="@string/bmod"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fourb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/oneb"
        android:layout_alignParentStart="true"
        android:text="@string/b4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fiveb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/oneb"
        android:layout_toEndOf="@+id/clearb"
        android:text="@string/b5" />

    <Button
        android:id="@+id/sixb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/oneb"
        android:layout_centerHorizontal="true"
        android:text="@string/b6"
        android:textSize="20sp" />

    <Button
        android:id="@+id/minusb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/oneb"
        android:layout_toEndOf="@+id/xsquareb"
        android:text="@string/bminus"
        android:textSize="20sp" />

    <Button
        android:id="@+id/divb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/oneb"
        android:layout_alignParentEnd="true"
        android:text="@string/bdiv"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sevenb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/fourb"
        android:layout_alignParentStart="true"
        android:text="@string/b7"
        android:textSize="20sp" />

    <Button
        android:id="@+id/eightb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/fourb"
        android:layout_alignStart="@+id/zerob"
        android:text="@string/b8"
        android:textSize="20sp" />

    <Button
        android:id="@+id/nineb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/fourb"
        android:layout_centerHorizontal="true"
        android:text="@string/b9"
        android:textSize="20sp" />

    <Button
        android:id="@+id/plusb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/fourb"
        android:layout_toEndOf="@+id/xsquareb"
        android:text="@string/bplus"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mulb"
        android:layout_width="70dp"
        android:layout_height="103dp"
        android:layout_above="@+id/fourb"
        android:layout_alignParentEnd="true"
        android:text="@string/bmul"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvc"
        android:layout_width="286dp"
        android:layout_height="140dp"
        android:layout_above="@+id/sevenb"
        android:layout_alignParentStart="true"
        android:textSize="50sp" />

    <Button
        android:id="@+id/deli"
        android:layout_width="70dp"
        android:layout_height="78dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/del"
        android:textSize="20dp" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="70dp"
        android:layout_height="78dp"
        android:layout_above="@+id/sevenb"
        android:layout_alignParentEnd="true"
        android:text="@string/dec"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>